--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/todo-app/todo-backend/node_modules
+/todo-app/todo-frontend/node_modules
+/my-app/backend/node_modules
 /.pnp
 .pnp.js
 
